[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/white_bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/orange_sort.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Runner.gd" type="Script" id=3]
[ext_resource path="res://Assets/roads.png" type="Texture" id=4]
[ext_resource path="res://Assets/whitesquare.png" type="Texture" id=5]
[ext_resource path="res://Assets/rainbow_bg_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/cloud.png" type="Texture" id=7]

[sub_resource type="TileSet" id=1]
0/name = "roads.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "roads.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 100, 0, 100, 100 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "roads.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 200, 0, 100, 100 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "roads.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 100, 100, 100 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "roads.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 100, 100, 100, 100 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "roads.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 200, 100, 100, 100 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "roads.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 200, 100, 100 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "roads.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 100, 200, 100, 100 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "roads.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 200, 200, 100, 100 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 50 )

[node name="Runner" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="rainbow" type="Sprite" parent="Sprite"]
texture = ExtResource( 6 )

[node name="cloud" type="Sprite" parent="."]
visible = false
position = Vector2( -16.0523, 14.5638 )
texture = ExtResource( 7 )

[node name="cloud2" type="Sprite" parent="."]
visible = false
position = Vector2( 16.7679, -31.5749 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -50, 0 )
tile_set = SubResource( 1 )
cell_size = Vector2( 100, 100 )
cell_quadrant_size = 100
format = 1
tile_data = PoolIntArray( -524288, 2, 0, -524287, 1, 0, -524286, 1, 0, -524285, 1, 0, -524284, 3, 0, -458752, 7, 0, -393216, 6, 0, -327680, 7, 0, -262144, 6, 0, -196608, 7, 0, -131072, 6, 0, -65536, 0, 0 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="background" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
rotating = true
current = true
zoom = Vector2( 0.125, 0.125 )

[node name="left" type="TouchScreenButton" parent="KinematicBody2D"]
position = Vector2( -14, -100 )
rotation = -3.14159
scale = Vector2( 2, -2 )
shape = SubResource( 3 )

[node name="right" type="TouchScreenButton" parent="KinematicBody2D"]
position = Vector2( 14, -100 )
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[node name="speed_timer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="pressed" from="KinematicBody2D/left" to="." method="_on_left_pressed"]
[connection signal="released" from="KinematicBody2D/left" to="." method="_on_left_released"]
[connection signal="pressed" from="KinematicBody2D/right" to="." method="_on_right_pressed"]
[connection signal="released" from="KinematicBody2D/right" to="." method="_on_right_released"]
[connection signal="timeout" from="speed_timer" to="." method="_on_speed_timer_timeout"]
